[package]
name = "kanji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = "0.5.0"
grammers-session = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }

