[package]
name = "kanji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
grammers-client = "0.5.0"
grammers-session = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.5", features = ["postgres"] }
solana-sdk = "1.18.10"
solana-client = "1.18.10"
solana-account-decoder = "1.18.10"



